--- a/custom_components/groupe_e/manifest.json
+++ b/custom_components/groupe_e/manifest.json
@@ -6,7 +6,8 @@
   "documentation": "https://github.com/carnevlu/hscs-groupe-e",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/carnevlu/hscs-groupe-e/issues",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "requirements": ["aiohttp"],
+  "dependencies": ["application_credentials"],
   "brand": "groupe_e"
 }
